# python-pmc-ctxdecoextended

./: .gitignore  CHANGELOG.md  README.md  setup.cfg  tox.ini
.github/workflows/: pythonpackage.yml
requirements/: dev.txt  test.txt
src/pmc/ctxdecoextended/: __init__.py
tests/: test_ctxdecoextended.py
