[metadata]
name = pmc-ctxdecoextended
maintainer = Andrei Kolotev
maintainer-email = kolotev@ncbi.nlm.nih.gov
home-page = https://bitbucket.ncbi.nlm.nih.gov/projects/PMC/repos/python-pmc-ctxdecoextended/browse

[files]
packages_root = src
package_dir = src
include_package_data = True
namespace_packages = pmc



[bdist_wheel]
universal = true
